<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--****************** TITLES ******************-->
    <string name="app_name" translatable="false">Configurator\nPC</string>
    <string name="title_community">Community</string>
    <string name="title_configurations">My configurations</string>
    <string name="title_store">Store</string>
    <string name="title_item_description">Item description</string>

    <!--****************** GENERAL ******************-->
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>

    <!--************ EDIT_CONFIGURATION ************-->
    <!-- EDIT LAYOUTS -->
    <string name="CPU">Processor</string>
    <string name="Case">Case</string>
    <string name="Cooler">Cooler</string>
    <string name="Graphics_card">Graphic card</string>
    <string name="HDD1">HDD drive 1</string>
    <string name="HDD2">HDD drive 2</string>
    <string name="Motherboard">Motherboard</string>
    <string name="Power_supply">Power supply</string>
    <string name="RAM">RAM</string>
    <string name="SSD">SSD drive</string>
    <!-- BUTTONS -->
    <string name="delete_configuration">Delete configuration</string>
    <string name="rename_configuration">Rename configuration</string>
    <string name="confirmation_delete">Are you sure?</string>
    <string name="on_button_delete_text">Delete!</string>
    <string name="on_button_rename_text">Rename!</string>

    <!--************** CONFIGURATIONS **************-->
    <string name="configuration_name">My configuration</string>
    <string name="average_price">Average price:</string>
    <!-- CREATE_CONFIGURATION_DIALOG-->
    <string name="enter_configuration_name">Enter configuration name</string>
    <string name="create_configuration">Create!</string>

    <!--****************** STORE ******************-->
    <!-- TABS -->
    <string name="tab_CPU">Processors</string>
    <string name="tab_HDD">HDD drives</string>
    <string name="tab_RAM">RAM`s</string>
    <string name="tab_SSD">SSD drives</string>
    <string name="tab_case">Cases</string>
    <string name="tab_cooler">Coolers</string>
    <string name="tab_graphics_card">Graphics card</string>
    <string name="tab_motherboard">Motherboards</string>
    <string name="tab_power_supply">Power supplies</string>
    <!-- STORE_ITEM -->
    <string name="item_name" translatable="false">Name…</string>
    <string name="item_description" translatable="false">Description…</string>

    <!--*********** STORE_ITEM_DESCRIPTION ***********-->
    <string name="component_name" translatable="false">Component name</string>
    <!-- ATTRIBUTES -->
    <string name="attributes">Attributes</string>
    <string name="attribute_name" translatable="false">Attribute name</string>
    <string name="attribute_value" translatable="false">Attribute value</string>
    <!-- PRICES -->
    <string name="prices">Prices</string>
    <string name="store_name" translatable="false">Store</string>
    <string name="date_01" translatable="false">01.01.2022</string>
    <string name="price" translatable="false">Price</string>
    <!-- BUTTONS -->
    <string name="add_to_configuration">Add to configuration</string>
    <string name="remove_from_configuration">Remove from configuration</string>


</resources>
