<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:weightSum="1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:background="@drawable/rectangle">

            <TextView
                android:id="@+id/text_configuration_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/configuration_name"
                android:textColor="#000000"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/rename_configuration_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right|center_vertical|center_horizontal|center|end"
                android:layout_margin="5dp"
                android:clickable="true"
                android:contentDescription="@string/rename_configuration"
                android:focusable="true"
                android:src="@drawable/ic_edit"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/delete_configuration_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="bottom|right|center_vertical|center_horizontal|center|end"
                android:layout_margin="5dp"
                android:contentDescription="@string/delete_configuration"
                android:src="@drawable/ic_delete" />

            <View
                android:id="@+id/view8"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_vertical|center_horizontal|center"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/edit_configuration_average_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/average_price"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/edit_configuration_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.17"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/edit_motherboard"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/rectangle"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/image_motherboard"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:clickable="false"
                    android:padding="3dp"
                    android:src="@drawable/ic_motherboard" />

                <TextView
                    android:id="@+id/text_motherboard"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:ellipsize="end"
                    android:gravity="top|center_vertical|center_horizontal|center"
                    android:maxLines="2"
                    android:paddingBottom="1dp"
                    android:text="@string/Motherboard"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_CPU"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/rectangle"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/image_CPU"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:padding="3dp"
                    android:src="@drawable/ic_cpu" />

                <TextView
                    android:id="@+id/text_CPU"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:ellipsize="end"
                    android:gravity="top|center_vertical|center_horizontal|center"
                    android:maxLines="2"
                    android:paddingBottom="1dp"
                    android:text="@string/CPU"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.17"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/edit_cooler"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/rectangle"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/image_cooler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:clickable="false"
                    android:padding="3dp"
                    android:src="@drawable/ic_cooler" />

                <TextView
                    android:id="@+id/text_cooler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:ellipsize="end"
                    android:gravity="top|center_vertical|center_horizontal|center"
                    android:maxLines="2"
                    android:paddingBottom="1dp"
                    android:text="@string/Cooler"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_graphics_card"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/rectangle"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/image_graphic_card"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:padding="3dp"
                    android:src="@drawable/ic_graphics_card" />

                <TextView
                    android:id="@+id/text_graphic_card"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:ellipsize="end"
                    android:gravity="top|center_vertical|center_horizontal|center"
                    android:maxLines="2"
                    android:paddingBottom="1dp"
                    android:text="@string/Graphics_card"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.17"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/edit_RAM"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/rectangle"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/image_RAM"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:clickable="false"
                    android:padding="3dp"
                    android:src="@drawable/ic_ram" />

                <TextView
                    android:id="@+id/text_RAM"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:ellipsize="end"
                    android:gravity="top|center_vertical|center_horizontal|center"
                    android:maxLines="2"
                    android:paddingBottom="1dp"
                    android:text="@string/RAM"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_SSD"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/rectangle"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/image_drive"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:padding="3dp"
                    android:src="@drawable/ic_hdd" />

                <TextView
                    android:id="@+id/text_drive"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:ellipsize="end"
                    android:gravity="top|center_vertical|center_horizontal|center"
                    android:maxLines="2"
                    android:paddingBottom="1dp"
                    android:text="@string/SSD"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.17"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/edit_case"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/rectangle"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/image_case"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:clickable="false"
                    android:padding="3dp"
                    android:src="@drawable/ic_case" />

                <TextView
                    android:id="@+id/text_case"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:ellipsize="end"
                    android:gravity="top|center_vertical|center_horizontal|center"
                    android:maxLines="2"
                    android:paddingBottom="1dp"
                    android:text="@string/Case"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_power_supply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/rectangle"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/image_power_supply"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:padding="3dp"
                    android:src="@drawable/ic_power_supply" />

                <TextView
                    android:id="@+id/text_power_supply"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:ellipsize="end"
                    android:gravity="top|center_vertical|center_horizontal|center"
                    android:maxLines="2"
                    android:paddingBottom="1dp"
                    android:text="@string/Power_supply"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.17"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/edit_add_hdd1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/rectangle"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/image_add_hdd1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:clickable="false"
                    android:padding="3dp"
                    android:src="@drawable/ic_hdd" />

                <TextView
                    android:id="@+id/text_add_hdd1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:ellipsize="end"
                    android:gravity="top|center_vertical|center_horizontal|center"
                    android:maxLines="2"
                    android:paddingBottom="1dp"
                    android:text="@string/HDD1"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_add_hdd2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/rectangle"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/image_add_hdd2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:padding="3dp"
                    android:src="@drawable/ic_hdd" />

                <TextView
                    android:id="@+id/text_add_hdd2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:ellipsize="end"
                    android:gravity="top|center_vertical|center_horizontal|center"
                    android:maxLines="2"
                    android:paddingBottom="1dp"
                    android:text="@string/HDD2"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
